--- a/splinter.tex
+++ b/splinter.tex
@@ -7,9 +7,10 @@ Web applications are collecting increasing amounts
 of data, and this data contains information useful
 to both users and businesses. For example,
 users can access crowdsourced information,
-such as traffic data to determine the fastest route.
+such as the most up-to-date
+traffic data to determine the fastest route.
 Similarly, businesses can use this data to better
-understand user behavior and perform analytics. 
+understand user behavior and better market products. 
 Many of these applications currently allow users
 to query these datasets, but an increasing number
 are allowing businesses and researchers to query
