get rid of some text

--- a/splinter.tex
+++ b/splinter.tex
@@ -229,7 +229,7 @@ and that the user's Splinter client is uncompromised.
 %Protecting attacks on a user's machine are outside of the scope of Splinter.
 Our cryptographic assumptions are standard.
 We only assume the existence of one-way functions in our two-provider implementation.
-In our implementation for multiple providers, the security of Paillier encryption~\cite{paillier} is also assumed.
+%In our implementation for multiple providers, the security of Paillier encryption~\cite{paillier} is also assumed.
 
 
 \subsection{Function Secret Sharing}
