--- a/splinter.tex
+++ b/splinter.tex
@@ -228,7 +228,7 @@ We assume the data is in cleartext and that the user communicates with each prov
 and that the user's Splinter client is uncompromised. 
 %Protecting attacks on a user's machine are outside of the scope of Splinter.
 Our cryptographic assumptions are standard.
-We only assume the existence of one-way functions in our two-provider implementation.
+We only assume the existence of one-way functions.
 %In our implementation for multiple providers, the security of Paillier encryption~\cite{paillier} is also assumed.
 
 
