--- a/splinter.tex
+++ b/splinter.tex
@@ -925,9 +925,7 @@ Our FSS library implementation can be found at \url{https://github.com/frankw2/l
 	\label{fig:big-results}
 \end{figure*}
 
-In our evaluation, we aim to answer one main question: can Splinter
-be used practically for real applications? To answer this question,
-we built and evaluated clones of three applications 
+In our evaluation, we built and evaluated clones of three applications 
 on Splinter: restaurant reviews, flight data, and map routing, using real datasets.
 We also compare Splinter to previous private systems, and estimate hosting costs.
 Our providers ran on 64-core Amazon EC2 \texttt{x1} servers with Intel Xeon E5-2666 Haswell processors and 1.9 TB 
@@ -938,7 +936,7 @@ Overall, our experiments show the following:
 \begin{itemize}
 	\item{Splinter can support realistic applications including the search features of Yelp and flight search sites, and data structures
 		required for map routing.}
-	\item{Splinter achieves end-to-end latencies below 1.6 sec for queries in these applications on realistic data.}
+	\item{Splinter achieves end-to-end latencies below 1.6 seconds for queries in these applications on realistic data.}
 	\item{Splinter's protocols use up to 10$\times$ fewer round trips than prior systems and have lower response times.}
 \end{itemize}
 
