--- a/splinter.tex
+++ b/splinter.tex
@@ -882,9 +882,10 @@ and the AES-NI hardware instructions
 for AES encryption. We used 
 GMP~\cite{gmp} for large integers and OpenMP~\cite{openmp} for multithreading.
 Our optimized FSS library is about 2000 lines of code, and the applications on top of it are about 2000 lines of code. There is around 
-1500 lines of test code to issue the queries. For comparison, 
-we also implement the multi-party
-FSS scheme in~\cite{corrigan-gibbs:riposte} using 2048 bit Paillier encryption ~\cite{paillier}.
+1500 lines of test code to issue the queries. 
+%For comparison, 
+%we also implement the multi-party
+%FSS scheme in~\cite{corrigan-gibbs:riposte} using 2048 bit Paillier encryption ~\cite{paillier}.
 Our FSS library implementation can be found at \url{https://github.com/frankw2/libfss}.
 
 \subsection{Evaluation}
