--- a/splinter.tex
+++ b/splinter.tex
@@ -926,7 +926,7 @@ Our FSS library implementation can be found at \url{https://github.com/frankw2/l
 	\label{fig:big-results}
 \end{figure*}
 
-In our evaluation, we built and evaluated clones of three applications 
+We built and evaluated clones of three applications 
 on Splinter: restaurant reviews, flight data, and map routing, using real datasets.
 We also compare Splinter to previous private systems, and estimate hosting costs.
 Our providers ran on 64-core Amazon EC2 \texttt{x1} servers with Intel Xeon E5-2666 Haswell processors and 1.9 TB 
