mention that communication costs are higher to return restaurant names

--- a/concl.tex
+++ b/concl.tex
@@ -29,6 +29,11 @@ cross-organization data sharing. MPC is a well-studied cryptographic solution to
 impracticality has prevented widespread adoption. Are there ways to do MPC on more complex
 computations, such as graph queries?
 
-As web services have become more prevalent, it is important to not only think about
-server-side data leakages but also potential leakage through other channels,
-such as the browser and user queries.
+With the increased number of data and privacy breaches, users are becoming
+more aware of the "cost" of using web services. Moreover, regulations like
+GDPR are levying heavy penalties on organizations that do not build
+secure mechanisms that protect user data. As a result, we will see
+an increase both in users and web services that want to prevent data leakage.
+We hope that the systems in this dissertation serve
+as a good foundation for thinking about practical, secure mechanisms
+that prevent this leakage.
