--- a/intro.tex
+++ b/intro.tex
@@ -15,7 +15,7 @@ on the server side, data can leak through data breaches
 or be accessed by malicious service administrators. On the client side,
 sensitive user information can leak from the browser whenever
 a user accesses a web application. These scenarios raise an important
-question. How do we build secure
+question. How do we build practical, secure
 mechanisms to prevent this data leakage?
 
 Much research has focused on building systems~\cite{popa:mylar, popa:cryptdb, li:sundr, feldman:sporc} 
