--- a/p.bib
+++ b/p.bib
@@ -24,6 +24,18 @@
   crossref = {NSDI17},
 }
 
+@Misc{increase-mobile,
+  author = {Rahis Saifi}, 
+  title = {{The 2017 Mobile App Market: Statistics, Trends, and Analysis}},
+  note = {\url{https://www.business2community.com/mobile-apps/2017-mobile-app-market-statistics-trends-analysis-01750346}}
+}
+
+@Misc{mobile-delays,
+  author = {"O'Reilley},
+  title = {{Optimizing for Mobile Networks}},
+  note = {\url{https://hpbn.co/optimizing-for-mobile-networks/}}
+}
+
 @Misc{amazon-disc-pricing,
   author = {Adam Tanner},
   title = {{Different customers, Different prices, Thanks to big data}},
