--- a/concl.tex
+++ b/concl.tex
@@ -22,18 +22,24 @@ work. However, open research problems still remain. For example, can private que
 or trillions of records? Furthermore, can private queries support more expressive operators like JOINs or
 NOT conditions? What are the limitations on the types of FSS can support practically?
 
-Multi-party computation (MPC) allows participants to evaluate a common function without revealing
+Secure multi-party computation (MPC) allows participants to evaluate a common function without revealing
 their respective inputs. As hospitals, governments, and corporations increasingly transition from
 paper records to electronic ones, MPC-style computations represent a natural way to securely enable
 cross-organization data sharing. MPC is a well-studied cryptographic solution to this problem, but its
-impracticality has prevented widespread adoption. Are there ways to do MPC on more complex
-computations, such as graph queries?
+impracticality has prevented widespread adoption. However, FSS and MPC are closely related, and 
+the creation of FSS has shown promise for more practical protocols. In particular,
+are there ways to perform MPC practically on more complex computations, such as graph queries?
 
 With the increased number of data and privacy breaches, users are becoming
-more aware of the "cost" of using web services. Moreover, regulations like
+more aware of the "cost" of using web services, i.e. providing these services
+with data. Moreover, regulations like
 GDPR are levying heavy penalties on organizations that do not build
 secure mechanisms that protect user data. As a result, we will see
-an increase both in users and web services that want to prevent data leakage.
-We hope that the systems in this dissertation serve
+an increase both in users and web services that want more data protections.
+In addition, users are willing to trade some performance for privacy and security
+as long as it does not affect their experience and workflow. The increased
+use of DuckDuckGo and Tor support this trend. Therefore,
+as the need for secure systems grows, it is important to focus on performance
+and practicality. We hope that the systems in this dissertation serve
 as a good foundation for thinking about practical, secure mechanisms
-that prevent this leakage.
+in various web application contexts.
